; ModuleID = '/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_encoder_jp.c_EUC_IsLeadByte.c'
source_filename = "/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_encoder_jp.c_EUC_IsLeadByte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @EUC_IsLeadByte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @EUC_IsLeadByte(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @HPDF_UNUSED(i32 %5)
  %7 = load i32, i32* %4, align 4
  %8 = icmp sge i32 %7, 161
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  %11 = icmp sle i32 %10, 254
  br i1 %11, label %15, label %12

12:                                               ; preds = %9, %2
  %13 = load i32, i32* %4, align 4
  %14 = icmp eq i32 %13, 142
  br label %15

15:                                               ; preds = %12, %9
  %16 = phi i1 [ true, %9 ], [ %14, %12 ]
  %17 = zext i1 %16 to i32
  ret i32 %17
}

declare dso_local i32 @HPDF_UNUSED(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
